--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap": "~3.0.3",
     "jquery": "~1.11.0",
-    "angular": "~1.2.20"
+    "angular": "~1.2.20",
+    "moment": "~2.7.0"
   },
   "devDependencies": {}
 }
